# BEWiS

./: CMakeLists.txt  Dockerfile  NE&DL.ipynb  README.md  bewis.cpp  bewis.hpp  bewisx.cpp  bgwis.cpp
wisardlib/: bgwis.cpp  bgwis.hpp  wnet_lib.cpp  wnet_lib.hpp
